--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
-    "start": "http-server",
+    "start": "babel script.js --watch --out-file script-compiled.js",
     "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
@@ -36,5 +36,8 @@
     "http-server": "^0.11.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.3"
+  },
+  "dependencies": {
+    "babel-standalone": "^6.26.0"
   }
 }
