--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "babel-standalone": "^6.26.0"
   }
 }
